# mqt-qudits

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
src/: CMakeLists.txt  MQT Qudits Tutorial.ipynb  MQT Qudits in Short.ipynb  example.py  main.py  test.py
src/mqt/circuit/: circuit.py  quantum_register.py
src/mqt/circuit/components/instructions/: gate.py  instruction.py
src/mqt/circuit/components/instructions/gate_extensions/: controls.py
src/mqt/circuit/components/instructions/gate_set/: csum.py  customunitary.py  cx.py  gellman.py  h.py  ls.py  ms.py  perm.py  r.py  randu.py  rz.py  s.py  x.py  z.py
src/mqt/circuit/gates/: gate.py
src/mqt/circuit/instructions/: gate.py
src/mqt/circuit/instructions/gate_set/: csum.py  customunitary.py  cx.py  gellman.py  h.py  ls.py  ms.py  perm.py  r.py  randu.py  rz.py  s.py  x.py  z.py
src/mqt/exceptions/: circuiterror.py
src/mqt/interface/: qasm.py
src/mqt/qudits/: __init__.py
src/mqt/qudits/_qudits/: misim.pyi
src/mqt/qudits/compiler/: __init__.py  compiler_pass.py  dit_compiler.py  dit_manager.py
src/mqt/qudits/compiler/compilation_minitools/: __init__.py  local_compilation_minitools.py  naive_unitary_verifier.py  numerical_ansatz_utils.py
src/mqt/qudits/compiler/multidit/transpile/: phy_multi_control_transp.py
src/mqt/qudits/compiler/naive_local_resynth/: __init__.py  local_resynth.py
src/mqt/qudits/compiler/onedit/: __init__.py  local_adaptive_decomp.py  local_qr_decomp.py  propagate_virtrz.py  remove_phase_rotations.py
src/mqt/qudits/compiler/onedit/local_operation_swap/: __init__.py  swap_routine.py
src/mqt/qudits/compiler/onedit/local_phases_transpilation/: __init__.py  propagate_virtrz.py  remove_phase_rotations.py
src/mqt/qudits/compiler/onedit/local_rotation_tools/: local_compilation_minitools.py
src/mqt/qudits/compiler/onedit/mapping_aware_transpilation/: __init__.py  phy_local_adaptive_decomp.py  phy_local_qr_decomp.py
src/mqt/qudits/compiler/onedit/mapping_un_aware_transpilation/: __init__.py  log_local_adaptive_decomp.py  log_local_qr_decomp.py
src/mqt/qudits/compiler/onedit/randomized_benchmarking/: bench_suite.py
src/mqt/qudits/compiler/state_compilation/: retrieve_state.py  state_preparation.py
src/mqt/qudits/compiler/twodit/: __init__.py
src/mqt/qudits/compiler/twodit/blocks/: crot.py  (+2 more)
src/mqt/qudits/core/: __init__.py  custom_python_utils.py  dfs_tree.py  lanes.py  level_graph.py  micro_dd.py
src/mqt/qudits/exceptions/: __init__.py  backenderror.py  circuiterror.py  compilerexception.py  joberror.py
src/mqt/qudits/quantum_circuit/: __init__.py  circuit.py  gate.py  matrix_factory.py  qasm.py
src/mqt/qudits/quantum_circuit/components/: __init__.py  classic_register.py  quantum_register.py
src/mqt/qudits/quantum_circuit/gates/: __init__.py  csum.py  custom_multi.py  custom_one.py  custom_two.py  cx.py  eachx.py  eachy.py  gellman.py  gellmann.py  h.py  ls.py  ms.py  noise_x.py  noise_y.py  perm.py  r.py  randu.py  rh.py  rz.py  s.py  virt_rz.py  x.py  z.py
src/mqt/qudits/qudit_circuits/: __init__.py  circuit.py
src/mqt/qudits/qudit_circuits/qasm_interface/: qasm.py
src/mqt/qudits/simulation/: __init__.py  qudit_provider.py  save_info.py
src/mqt/qudits/simulation/backends/: __init__.py  backendv2.py  innsbruck_01.py  misim.py  stochastic_sim.py  tnsim.py
src/mqt/qudits/simulation/data_log/: save_info.py
src/mqt/qudits/simulation/jobs/: __init__.py  client_api.py  config_api.py  device_server.py  job.py  job_result.py  jobstatus.py
src/mqt/qudits/simulation/noise_tools/: __init__.py  noise.py  noisy_circuit_factory.py
src/mqt/qudits/simulation/provider/: provider.py  qudit_provider.py
src/mqt/qudits/visualisation/: __init__.py  drawing_routines.py  mini_quantum_information.py  plot_information.py  run_info.py
src/mqt/simulation/mqt_provider/backends/: tnsim.py
src/mqt/simulation/provider/: job.py  jobstatus.py  mqtvider.py  provider.py
src/mqt/simulation/provider/backends/: backendv2.py
src/mqt/simulator/: tnsim.py
src/python/: CMakeLists.txt  bindings.cpp
test/: CMakeLists.txt  data_collect.cpp  main.cpp  test_pkg.cpp
test/python/: test.py
test/python/_qudits/: test_pymisim.py
test/python/compiler/: test_dit_compiler.py
test/python/compiler/compilation_minitools/: test_local_compilation_minitools.py  test_naive_unitary_verifier.py
test/python/compiler/multi/transpile/: test_phy_multi_control_transp.py
test/python/compiler/naive_local_resynth/: test_local_resynth.py
test/python/compiler/onedit/: test_bench_suite.py  test_log_local_adaptive_decomp.py  test_log_local_qr_decomp.py  test_phy_local_adaptive_decomp.py  test_phy_local_qr_decomp.py  test_propagate_virtrz.py  test_remove_phase_rotations.py  test_swap_routine.py
test/python/compiler/state_compilation/: state_preparation.npy  test_retrieve_state.py  test_state_preparation.py
test/python/compiler/twodit/entangled_qr/: test_crot.py  test_czrot.py  test_entangled_qr.py  test_pswap.py
test/python/compiler/twodit/transpile/: test_phy_two_control_trans.py
test/python/compiler/twodit/variational_twodit_compilation/: test_ansatz_solve_n_search.py  test_sparsifier.py
test/python/core/: test_dfs_tree.py  test_lanes.py  test_level_graph.py  test_micro_dd.py
test/python/qudits_circuits/: test_circuit.py  test_csum.py  test_cx.py  test_qasm.py  test_s.py  test_x.py
test/python/qudits_circuits/components/: test_matrix_factory.py  test_quantum_register.py
test/python/qudits_circuits/gate_set/: test_csum.py  test_custom_multi.py  test_custom_one.py  test_custom_two.py  test_cx.py  test_gellman.py  test_h.py  test_ls.py  test_ms.py  test_noisex.py  test_noisey.py  test_perm.py  test_r.py  test_randu.py  test_rh.py  test_rz.py  test_s.py  test_virtrz.py  test_x.py  test_z.py
test/python/simulation/: test_backends.py  test_device_integration.py  test_misim.py  test_tnsim.py
test/python/simulation/noise_tools/: test_noise.py  test_noise_tools.py  test_noise_tools_mathematical.py  test_noise_tools_physical.py
(+123 files in other folders)
