[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[project]
name = "mqt.qudit"
description = "MQT Qudits: A framework for mixed-dimensional qudit quantum computing"
readme = "README.md"
authors = [
    { name = "Kevin Mato", email = "kevin.mato@tum.de" },
]

keywords = ["MQT", "quantum computing", "design automation", "quantum circuit", "qudits"]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.25",
    "mqt.misim @ git+https://github.com/KevinMTO/misim-binding.git",
    "asttokens==2.4.1",
    "comm==0.2.2",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fonttools==4.45.0",
    "graphviz==0.20.1",
    "h5py==3.10.0",
    "jedi==0.19.1",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.2",
    "matplotlib-inline==0.1.6",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numexpr==2.8.8",
    "opt-einsum==3.3.0",
    "packaging==23.2",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "Pillow==10.3.0",
    "platformdirs==4.2.0",
    "prompt-toolkit==3.0.43",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "Pygments==2.17.2",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "pyzmq==25.1.2",
    "scipy==1.11.3",
    "six==1.16.0",
    "stack-data==0.6.3",
    "sympy==1.12",
    "tensornetwork==0.4.6",
    "tornado==6.4",
    "traitlets==5.14.2",
    "wcwidth==0.2.13"
]

dynamic = ["version"]

[project.optional-dependencies]


[project.urls]
Homepage = "https://github.com/cda-tum/mqt-qudits"
Discussions = "https://github.com/cda-tum/mqt-qudits/discussions"
Research = "https://www.cda.cit.tum.de/research/"

[tool.ruff]
select = [
    "E", "F", "W", # flake8
    "A", # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B", "B904", # flake8-bugbear
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "N", # flake8-naming
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "E501", # Line too long (Black is enough)
    "PLR2004", # Magic values
    "PLR0913", # Too many arguments
]
target-version = "py38"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "extern",
]

line-length = 120

[tool.black]
line-length = 120
