[build-system]
requires = ["scikit-build-core>=0.8.1", "setuptools-scm>=7", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "mqt.qudits"
description = "A Framework For Mixed-Dimensional Qudit Quantum Computing"
readme = "README.md"
authors = [
    { name = "Kevin Mato", email = "kevin.mato@tum.de" },
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de"},
]

keywords = ["MQT", "quantum-computing", "design-automation", "qudits"]
license = { file = "LICENSE" }

classifiers = [
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "scipy>=1.10",
    "h5py>=3.7",
    "tensornetwork>=0.4",
    "matplotlib>=3.7",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
coverage = ["mqt.qudits[test]", "pytest-cov>=4"]
docs = [
    "furo>=2023.08.17",
    "sphinx",
    "myst_nb>=1.1.0",
    "setuptools-scm>=7",
    "sphinx-copybutton",
    "sphinx_design",
    "sphinx-inline-tabs",
    "sphinxext-opengraph",
    "sphinxcontrib-bibtex>=2.4.2",
    "sphinxcontrib-svg2pdfconverter",
    "pybtex>=0.24",
    "ipython",
    "ipykernel",
    "sphinx-autoapi",
]
dev = ["mqt.qudits[coverage,docs]"]

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-qudits"
Documentation = "https://mqt.readthedocs.io/projects/qudits"
Issues = "https://github.com/cda-tum/mqt-qudits/issues"
Discussions = "https://github.com/cda-tum/mqt-qudits/discussions"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8.1"

# Set the wheel install directory
wheel.install-dir = "mqt/qudits"

# Set required CMake and Ninja versions
cmake.version = ">=3.19"
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Explicitly set the package directory
wheel.packages = ["src/mqt"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/mqt/qudits/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.check-sdist]
sdist-only = ["src/mqt/core/_version.py"]
git-only = [
    "docs/*",
    "extern/*",
    "test/*",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_QUDITS_TESTS = "OFF"
BUILD_MQT_QUDITS_BINDINGS = "ON"


[tool.setuptools_scm]
write_to = "src/mqt/qudits/_version.py"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
]
log_cli_level = "info"
testpaths = ["test/python"]

[tool.coverage]
run.source = ["mqt.qudits"]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
]


[tool.mypy]
files = ["src/mqt", "test/python"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.8"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
src = ["src"]
preview = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",  "B904",  # flake8-bugbear
    "C4",          # flake8-comprehensions
#    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PD",          # pandas-vet
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
#    "T20",         # flake8-print
    "TCH",         # flake8-type-checking
    "TID251",      # flake8-tidy-imports
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "PT004",   # Incorrect, just usefixtures instead.
    "S101",    # Use of assert detected
    "S404",    # `subprocess` module is possibly insecure
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Mapping".msg = "Use collections.abc.Mapping instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
"typing.Set".msg = "Use collections.abc.Set instead."
"typing.Self".msg = "Use scikit_build_core._compat.typing.Self instead."
"typing_extensions.Self".msg = "Use scikit_build_core._compat.typing.Self instead."
"typing.assert_never".msg = "Use scikit_build_core._compat.typing.assert_never instead."
"importlib.resources".msg = "Use scikit_build_core._compat.importlib.resources instead."
"importlib_resources".msg = "Use scikit_build_core._compat.importlib.resources instead."

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN"]
"src/mqt/qudits/visualisation/**" = ["T20"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "PYI021"]  # pydocstyle
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.cibuildwheel]
build = "cp3*"
skip = "*-musllinux_*"
archs = "auto64"
test-command = "python -c \"from mqt import qudits\""
test-skip = "cp38-macosx_arm64"
build-frontend = "build"

[tool.cibuildwheel.linux]
environment = { DEPLOY="ON" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -v -w {dest_dir} {wheel}"
environment = { CMAKE_ARGS = "-T ClangCL" }
